# LinuxDev2020

./: README.md
03_TerminalProject/: Makefile  README.md  Show  Show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  CMakeconfig.h.in  README.md  pcreshow.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  unlinkat_wrapper.c
08_TestingCoverage/: Makefile  README.md
08_TestingCoverage/src/: buf.c  buf.h
08_TestingCoverage/tests/: tests.ts
09_I18nL10n/: Makefile.in  README.md  configure.ac  guess.c  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  Makefile.in  README.md  configure.ac  guess  guess.1  guess.c  guess.md  guess.pot  ru.po
11_Toolkits/: Makefile.am  README.md  configure.ac  test.txt  wordcount.c
12_ScriptingText/: Makefile.am  README.md  configure.ac  insver.sh.in
13_PatchInstall/: Makefile.am  README.md  configure.ac  guess.c  ru.po
